# vibe-guard

./: .gitignore  ARCHITECTURE-OVERVIEW-cn.md  ARCHITECTURE.md  README.md  pyproject.toml  vibe-guard-v0.1-results-cn.md  vibe-guard-v0.1-results.md  vibe-guard-v0.2-summary.md
vibe_guard/: __init__.py  align.py  cli.py  ingest.py  llm.py  models.py  normalizer.py  report.py  security.py
vibe_guard/hallucheck/: __init__.py  __main__.py  cache.py  cli.py  config.py  detector.py  fuzzy.py  models.py  parsers.py  registry.py
vibe_guard/hallucheck/tests/: __init__.py  test_cache.py  test_detector.py  test_fuzzy.py  test_parsers.py  test_registry.py
